# nixos-config

./: .gitignore  LICENSE  LICENSE.txt  TODOs.org  autosetup  deploy  flake.nix  gitconfig-extra  setup  setup-10-bash  setup-20-curl  setup-20-editorconfig  setup-20-git  setup-20-hg  setup-20-mintty  setup-20-screen  setup-20-ssh  setup-20-tmux  setup-20-vim  setup-20-wget  setup-30-node  setup-secrets
bash/: .aliases  .bash_profile  .bashrc  .exports  .functions  .profile
git/: .aliases.gitconfig  .gitconfig
mintty/: .minttyrc
users/Myhlamaeus/home/: default.nix  email.nix  games.nix  git.nix  gitignore  home.nix  update-gitignore  x11.nix  xmobar.hs  xmonad-config.cabal  xmonad.hs  xmonad.nix
users/Myhlamaeus/home/browsers/: chromium.nix  default.nix  firefox.nix  tridactylrc
users/Myhlamaeus/home/direnv/: default.nix  nix.sh
users/Myhlamaeus/home/editors/: default.nix  emacs.nix  neovim.nix
users/Myhlamaeus/home/editors/emacs/elfeed/: dev.org  fun.org  math.org  other.org
users/Myhlamaeus/home/editors/emacs/snippets/nix-mode/: morrowind-mod.nix  morrowind-module.nix
users/Myhlamaeus/home/editors/emacs/snippets/typescript-tsx-mode/: FormattedMessage.tsx  FormattedMessageV.tsx  enumItem.tsx
users/Myhlamaeus/home/editors/emacs/templates/: 05:\.stories\.tsx  10:\.tsx
users/Myhlamaeus/home/editors/lang/: csharp.nix  default.nix  graphviz.nix  haskell.nix  javascript.nix  json.nix  ledger.nix  protobuf.nix  typescript.nix
users/Myhlamaeus/home/games/: default.nix  other.nix  platforms.nix  roguelike.nix  rpgs.nix  rts.nix  simulation.nix  strategy.nix
(+51 files in other folders)
