name:                xmonad-config
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-config
  hs-source-dirs:       .
  main-is:              xmonad.hs
  build-depends:        base
                      , xmonad
                      , xmonad-contrib
                      , containers
  default-language:     Haskell2010
